--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ luac.out
 *.x86_64
 *.hex
 .vscode
+data/cifar-10-batches-py/batches.meta
+data/cifar-10-batches-py/data_batch_1
+data/cifar-10-batches-py/data_batch_3
+data/cifar-10-batches-py/data_batch_2
+data/cifar-10-batches-py/data_batch_4
+data/cifar-10-batches-py/data_batch_5
+data/cifar-10-batches-py/readme.html
+data/cifar-10-batches-py/test_batch
